added games/my/scores+docs
